<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/first_fragment"
        android:title="@string/menu_message"
        android:contentDescription="@string/menu_message"
        android:icon="@drawable/ic_chat_white"/>

    <item
        android:id="@+id/second_fragment"
        android:title="@string/menu_my_people"
        android:contentDescription="@string/menu_my_people"
        android:icon="@drawable/ic_my_people_white"/>
    <item
        android:id="@+id/third_fragment"
        android:title="@string/menu_my_people_request"
        android:contentDescription="@string/menu_my_people"
        android:icon="@drawable/ic_my_people_requests_black"/>

    <item
        android:id="@+id/fourth_fragment"
        android:title="@string/menu_call"
        android:contentDescription="@string/menu_call"
        android:icon="@drawable/ic_call_black"/>


    <item
        android:id="@+id/fifth_fragrment"
        android:title="@string/menu_world"
        android:contentDescription="@string/menu_world"
        android:icon="@drawable/ic_world_white"/>

</menu>